# tracer.rs

./: .gitignore  .gitmodules  Cargo.toml  flake.nix  rust-toolchain.toml  rustfmt.toml
other/rtmath/: Cargo.toml
other/rtmath/src/: lib.rs
other/sslang/: Cargo.toml  build.rs
other/sslang/src/: grammar.lalrpop  main.rs
other/vox_loader/: Cargo.toml  vox.hexpat.c
other/vox_loader/src/: chunk.rs  data_iterator.rs  lib.rs  state.rs  transform.rs
run/: .env  .gitignore  README.md  run.nu  tree  tree_threaded  untitled.vox  vox.hexproj
run/shaders/: compute.wgsl  denoiser.wgsl  main.wgsl  out.wgsl  path_tracer.wgsl  rasteriser.wgsl  readme.txt  visualiser.wgsl
run/shaders/common/: constants.wgsl  geometry.wgsl  ray.wgsl  state.wgsl
run/shaders/inc/: common.wgsl  constants.wgsl  dist.wgsl  geometry.wgsl  pinpoint.wgsl  ray.wgsl  rng.wgsl  sky.wgsl  state.wgsl
run/shaders/path_tracer/: box.wgsl  main.wgsl
src/: app.rs  fun.rs  input_store.rs  input_tracker.rs  main.rs  shader.wgsl  state.rs  subscriber.rs
src/basic_octree/: extent.rs  mod.rs  path.rs  threaded.rs
src/color/: color.rs  spectrum.rs
src/essential_stuff/: mod.rs
src/gfx/: app.rs  camera.rs  instance.rs  mod.rs  perspective.rs  texture.rs  vertex.rs
src/imgui_stuff/: font.rs  mod.rs  shader.wgsl
src/intersection/: interaction.rs  intersectable.rs  intersection.rs  mod.rs
src/material/: dielectric.rs  lambertian.rs  mod.rs
src/scene/: mod.rs
src/shape/: mod.rs  plane.rs  sphere.rs
src/soft_pt/: types.rs
src/subscribers/: fps_tracker.rs  mod.rs
src/tracer/: mod.rs  state.rs
(+47 files in other folders)
