[workspace]
members = ["other/vox_loader"]

[package]
name = "tracer_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "2.4.1"
contracts = "0.6.3"
color-backtrace = "0.6.1"

color-eyre = "0.6.1"
eyre = "0.6.11"
dotenv = "0.15.0"
env_logger = "0.10.1"
log = "0.4.20"
tokio = { version = "1.35.1", features = ["full"] }

bytemuck = { version = "1.14.0", features = ["derive"] }
cgmath = "0.18"
wgpu = "0.19.1"
winit = "0.29.14"

imgui = "0.11.0"

stuff = { path = "./thirdparty/stuff" }
vox_loader = { path = "./other/vox_loader" }
